fixes to sort menu, table overflow and pic

--- a/webapp/src/components/table/table.scss
+++ b/webapp/src/components/table/table.scss
@@ -3,7 +3,7 @@
 .Table {
     margin-top: 16px;
     margin-left: 0 !important;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     flex: 1;
 
